update after publication

--- a/index.html
+++ b/index.html
@@ -95,7 +95,8 @@
 										<h3 align="center">PhD at Cardiff University</h3><br>
 										 <ul>
 											  <li>Review article: <a href="https://doi.org/10.1242/dmm.049376">Deep phenotyping for precision medicine in Parkinson's disease</a> </li>
-											  <li>Preprint: <a href="https://doi.org/10.1101/2022.11.28.22282809">Wearable devices can identify Parkinson’s disease up to 7 years before clinical diagnosis</a></li>
+											  <li>First author article: <a href="https://www.nature.com/articles/s41591-023-02440-2">Wearable movement-tracking data identify Parkinson’s disease years before clinical diagnosis</a></li>
+											  <li>Co-author articles: 2 peer-reviewed, 1 conference abstract</a></li>
 											</ul>
 									</p>
 								</div>
@@ -128,8 +129,9 @@
 								</header>
 								<p>
 										 <ul>
+										 	  <li><a href="https://www.bbc.co.uk/news/health-66088110">My Nature Medicine paper featured on BBC</a>: <a href="https://nature.altmetric.com/details/150961831">several other news features and twitter activity</a> and live radio interviews</li>
 											  <li><a href="https://ukdri.ac.uk/news-and-events/world-parkinsons-day-meet-the-researchers-making-a-difference">World Parkinson's Day: Meet the researchers making a difference</a>: interview following the Parkinson's early career researcher meeting 2023 in Manchester</li>
-											  <li><a href="https://www.youtube.com/watch?v=vRJhCPJmx1Y">Parkinson's Research in Wales 2023</a>: presented my work to patients and caregivers, lead scientific roundtables on digital sensors</li>
+											  <li><a href="https://www.youtube.com/watch?v=vRJhCPJmx1Y">Parkinson's Research in Wales 2023</a>: presented my work to patients and caregivers, led scientific roundtables on digital sensors</li>
 										</ul>
 								</p>
 							</article>
