Update job position

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 							<article id="me" class="panel intro">
 								<header>
 									<h1>Ann-Kathrin Schalkamp</h1>
-									<p>PhD Candidate in Bioinformatics</p>
+									<p>Applying Machine Learning for Healthcare</p>
 								</header>
 								<a href="#about" class="jumplink pic">
 									<!--<span class="arrow icon fa-chevron-right"><span>See my work</span></span>-->
@@ -52,7 +52,7 @@
 									Given the advancements in technologies generating big data and methodological tools in the field of machine learning, medicine is transitioning into a data-driven era. This transition has the potential to revolutionise healthcare through improvements in early diagnosis, personalised treatment, and care. 
 									My goal is to contribute to this advancement through research in computational medicine/clinical informatics. 
 									<br><br>
-									<a href="documents/CV.pdf">Curriculum Vitae</a> (Updated May 2023)<br><br>
+									<a href="documents/CV.pdf">Curriculum Vitae</a> (Updated January 2024)<br><br>
 								</p>
 								<p>
 									<h3 align="center">Why clinical informatics?</h3>
@@ -69,15 +69,15 @@
 									<h2>Educational Background</h2>
 								</header>
 								<p>
-									<b>Ph.D. in Bioinformatics</b> <br>
-									I am currently pursuing a Ph.D. at Cardiff University and the UK Dementia Research Institute, under the guidance of <a href="https://ukdri.ac.uk/team/caleb-webber">Caleb Webber</a> and <a href="https://www.cardiff.ac.uk/people/view/1144889-sandor-cynthia">Cynthia Sandor</a>. My research focuses on addressing various gaps in Parkinson's disease research, ranging from risk prediction to disease monitoring, through the application of data-driven methods on deeply phenotyped cohorts. I work with diverse data modalities, including digital sensors, electronic health records, genetics, brain imaging, blood biochemistry, and clinical data. My work involves applying various machine learning techniques, both supervised and unsupervised, to extract insights and improve understanding in this field.
+									<b>Ph.D. (passed without corrections)</b> <br>
+									I completed a Ph.D. at Cardiff University and the UK Dementia Research Institute, under the guidance of <a href="https://ukdri.ac.uk/team/caleb-webber">Caleb Webber</a> and <a href="https://www.cardiff.ac.uk/people/view/1144889-sandor-cynthia">Cynthia Sandor</a>. My research addressed various gaps in Parkinson's disease research, ranging from risk prediction to disease monitoring, through the application of data-driven methods in deeply phenotyped cohorts. I worked with diverse data modalities, including digital sensors, electronic health records, genetics, brain imaging, blood biochemistry, and clinical data. My work involved the application of various machine learning techniques, both supervised and unsupervised, to extract insights and improve understanding in this field.
 								</p>
 								<p>
-									<b>M.Sc. in Cognitive Science</b> <br>
+									<b>M.Sc. in Cognitive Science (first-class)</b> <br>
 									During my studies at the University of Tübingen, I prioritized expanding my methodological skills. To achieve this, I enrolled in advanced courses on machine learning, statistics, and data science. Notable highlights of my studies were seminars on computational psychiatry and deep learning for medicine, which demonstrated the significant impact advanced methodologies can have in the realm of neurological diseases.
 								</p>
 								<p>
-									<b>B.Sc. in Cognitive Science</b> <br>
+									<b>B.Sc. in Cognitive Science (first-class)</b> <br>
 									Throughout my studies at the University of Osnabrück, I attended introductory courses covering various aspects of cognitive science, thereby gaining fundamental knowledge and skills in this interdisciplinary field. I developed a particular interest in neuropsychology, neurobiology, and neuroinformatics, and pursued advanced courses in these subjects. To establish a strong methodological foundation, I placed special emphasis on mathematics and computer science.
 								</p>
 							</article>
@@ -92,11 +92,16 @@
 								</p>
 								<div>
 									<p>
+										<h3 align="center">Research Assistant at Imperial College London</h3><br>
+										 I work as a research assistant in the Translational Machine Intelligence Lab. My projects revolve around the usage of digital sensors for Parkinson's disease, specifically risk prediction and monitoring of non-motor symptoms.
+									</p>
+								</div>
+								<div>
+									<p>
 										<h3 align="center">PhD at Cardiff University</h3><br>
 										 <ul>
-											  <li>Review article: <a href="https://doi.org/10.1242/dmm.049376">Deep phenotyping for precision medicine in Parkinson's disease</a> </li>
-											  <li>First author article: <a href="https://www.nature.com/articles/s41591-023-02440-2">Wearable movement-tracking data identify Parkinson’s disease years before clinical diagnosis</a></li>
-											  <li>Co-author articles: 2 peer-reviewed, 1 conference abstract</a></li>
+											  <li>First first-author review article: <a href="https://doi.org/10.1242/dmm.049376">Deep phenotyping for precision medicine in Parkinson's disease</a> </li>
+											  <li>First first-author research article: <a href="https://www.nature.com/articles/s41591-023-02440-2">Wearable movement-tracking data identify Parkinson’s disease years before clinical diagnosis</a></li>
 											</ul>
 									</p>
 								</div>
@@ -141,7 +146,7 @@
 									<h2 align="center">Contact Me</h2>
 								</header>
 								<p align="center">
-									<span class="icon solid fa-envelope-open"></span> <a href="mailto:SchalkampA@cardiff.ac.uk">SchalkampA@cardiff.ac.uk</a>
+									<span class="icon solid fa-envelope-open"></span> <a href="mailto:SchalkampA@cardiff.ac.uk">a.schalkamp@imperial.ac.uk</a>
 									<span class="icon brands fa-github"></span> <a href="https://github.com/aschalkamp">aschalkamp</a> <br>
 									<span class="icon brands fa-linkedin"></span> <a href="https://www.linkedin.com/in/ann-kathrin-schalkamp-3501b21a7/">Ann-Kathrin Schalkamp</a>
 									<span class="icon brands fa-twitter"></span> <a href="https://twitter.com/ASchalkamp">@ASchalkamp</a>
