--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 									Given the advancements in technologies generating big data and methodological tools in the field of machine learning, medicine is transitioning into a data-driven era. This transition has the potential to revolutionise healthcare through improvements in early diagnosis, personalised treatment, and care. 
 									My goal is to contribute to this advancement through research in computational medicine/clinical informatics. 
 									<br><br>
-									<a href="documents/CV.pdf">Curriculum Vitae</a> (Updated January 2024)<br><br>
+									<a href="documents/CV.pdf">Curriculum Vitae</a> (Updated September 2024)<br><br>
 								</p>
 								<p>
 									<h3 align="center">Why clinical informatics?</h3>
@@ -73,11 +73,11 @@
 									I completed a Ph.D. at Cardiff University and the UK Dementia Research Institute, under the guidance of <a href="https://ukdri.ac.uk/team/caleb-webber">Caleb Webber</a> and <a href="https://www.cardiff.ac.uk/people/view/1144889-sandor-cynthia">Cynthia Sandor</a>. My research addressed various gaps in Parkinson's disease research, ranging from risk prediction to disease monitoring, through the application of data-driven methods in deeply phenotyped cohorts. I worked with diverse data modalities, including digital sensors, electronic health records, genetics, brain imaging, blood biochemistry, and clinical data. My work involved the application of various machine learning techniques, both supervised and unsupervised, to extract insights and improve understanding in this field.
 								</p>
 								<p>
-									<b>M.Sc. in Cognitive Science (first-class)</b> <br>
+									<b>M.Sc. in Cognitive Science (4.0 GPA)</b> <br>
 									During my studies at the University of Tübingen, I prioritized expanding my methodological skills. To achieve this, I enrolled in advanced courses on machine learning, statistics, and data science. Notable highlights of my studies were seminars on computational psychiatry and deep learning for medicine, which demonstrated the significant impact advanced methodologies can have in the realm of neurological diseases.
 								</p>
 								<p>
-									<b>B.Sc. in Cognitive Science (first-class)</b> <br>
+									<b>B.Sc. in Cognitive Science (3.7-3.9 GPA)</b> <br>
 									Throughout my studies at the University of Osnabrück, I attended introductory courses covering various aspects of cognitive science, thereby gaining fundamental knowledge and skills in this interdisciplinary field. I developed a particular interest in neuropsychology, neurobiology, and neuroinformatics, and pursued advanced courses in these subjects. To establish a strong methodological foundation, I placed special emphasis on mathematics and computer science.
 								</p>
 							</article>
@@ -92,8 +92,17 @@
 								</p>
 								<div>
 									<p>
-										<h3 align="center">Research Assistant at Imperial College London</h3><br>
-										 I work as a research assistant in the Translational Machine Intelligence Lab. My projects revolve around the usage of digital sensors for Parkinson's disease, specifically risk prediction and monitoring of non-motor symptoms.
+										<h3 align="center">Postdoctoral Scholar at UCSF</h3><br>
+										 I am using the electronic medical records from UC hospitals to improve clinical decision making. This involves extracting meaningful data from unstructured clinical notes, combining different data modalities, and training models to recommend treatments or predict future diagnoses.
+									</p>
+								</div>
+								<div>
+									<p>
+										<h3 align="center">Research Assistant/Associate at Imperial College London</h3><br>
+										 My projects revolved around the usage of digital sensors for neurodegenerative diseases, specifically risk prediction and monitoring of symptoms. Another project included the development of a large language model application for scientific publications.
+										 <ul>
+											  <li>Supervised projects: <a href="https://alz.confex.com/alz/2024/meetingapp.cgi/Paper/95287">Identifying diverse agitation profiles in dementia: Insights from longitudinal in-home monitoring data</a>, <a href="https://www.medrxiv.org/content/10.1101/2024.07.30.24311178v1">An Interpretable Machine Learning Tool for In-Home Screening of Agitation Episodes in People Living with Dementia</a> </li>
+											</ul>
 									</p>
 								</div>
 								<div>
@@ -156,7 +165,7 @@
 				<!-- Footer -->
 					<div id="footer">
 						<ul class="copyright">
-							<li>&copy; 2023 Ann-Kathrin Schalkamp</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							<li>&copy; 2024 Ann-Kathrin Schalkamp</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 						</ul>
 					</div>
 
