--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 									During my studies at the University of Tübingen, I prioritized expanding my methodological skills. To achieve this, I enrolled in advanced courses on machine learning, statistics, and data science. Notable highlights of my studies were seminars on computational psychiatry and deep learning for medicine, which demonstrated the significant impact advanced methodologies can have in the realm of neurological diseases.
 								</p>
 								<p>
-									<b>B.Sc. in Cognitive Science (3.7-3.9 GPA)</b> <br>
+									<b>B.Sc. in Cognitive Science (3.9 GPA)</b> <br>
 									Throughout my studies at the University of Osnabrück, I attended introductory courses covering various aspects of cognitive science, thereby gaining fundamental knowledge and skills in this interdisciplinary field. I developed a particular interest in neuropsychology, neurobiology, and neuroinformatics, and pursued advanced courses in these subjects. To establish a strong methodological foundation, I placed special emphasis on mathematics and computer science.
 								</p>
 							</article>
@@ -98,9 +98,10 @@
 								</div>
 								<div>
 									<p>
-										<h3 align="center">Research Assistant/Associate at Imperial College London</h3><br>
-										 My projects revolved around the usage of digital sensors for neurodegenerative diseases, specifically risk prediction and monitoring of symptoms. Another project included the development of a large language model application for scientific publications.
+										<h3 align="center">Research Assistant/Associate at Imperial College London (now honorary position)</h3><br>
+										 My projects revolve around the usage of digital sensors for neurodegenerative diseases, specifically risk prediction and monitoring of symptoms. Another project included the development of a large language model application for scientific publications.
 										 <ul>
+										 	  <li>Research outputs: Predicting incident dementia in the UK Biobank with smartwatches (AAIC 2024) </li>
 											  <li>Supervised projects: <a href="https://alz.confex.com/alz/2024/meetingapp.cgi/Paper/95287">Identifying diverse agitation profiles in dementia: Insights from longitudinal in-home monitoring data</a>, <a href="https://www.medrxiv.org/content/10.1101/2024.07.30.24311178v1">An Interpretable Machine Learning Tool for In-Home Screening of Agitation Episodes in People Living with Dementia</a> </li>
 											</ul>
 									</p>
@@ -108,9 +109,10 @@
 								<div>
 									<p>
 										<h3 align="center">PhD at Cardiff University</h3><br>
+										During my PhD I did data-driven research for Parkinson's disease including risk analysis, early diagnosis, progression modelling, and stratification with a focus on digital sensors data.
 										 <ul>
-											  <li>First first-author review article: <a href="https://doi.org/10.1242/dmm.049376">Deep phenotyping for precision medicine in Parkinson's disease</a> </li>
-											  <li>First first-author research article: <a href="https://www.nature.com/articles/s41591-023-02440-2">Wearable movement-tracking data identify Parkinson’s disease years before clinical diagnosis</a></li>
+											  <li>First-author research articles: <a href="https://www.nature.com/articles/s41591-023-02440-2">Wearable movement-tracking data identify Parkinson’s disease years before clinical diagnosis</a>, <a href="https://www.nature.com/articles/s41531-024-00719-w">Digital outcome measures from smartwatch data relate to non-motor features of Parkinson’s disease</a></li>
+											  <li>First-author review article: <a href="https://doi.org/10.1242/dmm.049376">Deep phenotyping for precision medicine in Parkinson's disease</a> </li>
 											</ul>
 									</p>
 								</div>
@@ -118,7 +120,7 @@
 									<p>
 										<h3 align="center">Master's Thesis at Neuronal Intelligence lab</h3><br>
 										During my time at the <a href="https://sinzlab.org/">Neural Intelligence Lab</a>, supervised by Fabian Sinz, I completed my master's thesis. The objective was to model the trajectories of cognitive and motor aging in healthy elderly individuals. By examining the influence of risk factors from various domains (genetics, lifestyle, tissue samples, demographics) on these trajectories, we aimed to establish general health guidelines and enable earlier diagnosis of pathological aging. I utilized advanced Bayesian reduced rank regression modeling to analyze longitudinal data from healthy elderly individuals with and without prodromal markers.
-										<a href="https://www.medrxiv.org/content/10.1101/2022.11.18.22282498v1">Preprint</a>
+										<a href="https://www.frontiersin.org/journals/aging-neuroscience/articles/10.3389/fnagi.2024.1447944/full">Publication</a>
 									</p>
 								</div>
 								<div>
@@ -155,7 +157,7 @@
 									<h2 align="center">Contact Me</h2>
 								</header>
 								<p align="center">
-									<span class="icon solid fa-envelope-open"></span> <a href="mailto:SchalkampA@cardiff.ac.uk">a.schalkamp@imperial.ac.uk</a>
+									<span class="icon solid fa-envelope-open"></span> <a href="mailto:ann-kathrin.schalkamp@ucsf.edu">ann-kathrin.schalkamp AT ucsf.edu</a>
 									<span class="icon brands fa-github"></span> <a href="https://github.com/aschalkamp">aschalkamp</a> <br>
 									<span class="icon brands fa-linkedin"></span> <a href="https://www.linkedin.com/in/ann-kathrin-schalkamp-3501b21a7/">Ann-Kathrin Schalkamp</a>
 									<span class="icon brands fa-twitter"></span> <a href="https://twitter.com/ASchalkamp">@ASchalkamp</a>
